--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,4 +1,4 @@
-<div class="container my-4">
+<div class="container my-4" id="about">
   <div class="row text-center justify-content-around">
     <div class="col-12">
       <h2 class="second-title border-bottom my-5 px-4 pb-2">About</h2>
