--- a/src/app/components/projects-section/project-item/project-item-card/project-item-card.component.html
+++ b/src/app/components/projects-section/project-item/project-item-card/project-item-card.component.html
@@ -1,10 +1,15 @@
-<div class="card text-center border-0 px-5 py-4 rounded-0 mt-4">
-    <img [src]="photo" class="w-100 my-2" alt="photo">
-    <div class="rounded-circle bg-white heartIcon shadow">
-      <img [src]="icon" class="p-1" width="28px" alt="iconNAME">
-    </div>
-    <div class="card-body">
-      <h5 class="card-title fs-5 "> {{title}} </h5>
-      <p class="card-text fw-lighter"> {{content}} </p>
-    </div>
+<a
+  mat-stroked-button
+  class="btn card text-center border-0 px-5 py-4 rounded-1 mt-4"
+  (click)="openDialog()"
+>
+  <img [src]="photo" class="w-100 my-2" alt="photo" />
+  <div class="rounded-circle bg-white heartIcon shadow">
+    <img [src]="icon" class="p-1" width="28px" alt="iconNAME" />
   </div>
+  <div class="card-body">
+    <h5 class="card-title fs-5">{{ title }}</h5>
+    <p class="card-text fw-lighter">{{ content }}</p>
+  </div>
+</a>
+ 
