--- a/src/app/components/projects-section/project-item/project-item.component.html
+++ b/src/app/components/projects-section/project-item/project-item.component.html
@@ -1,13 +1,40 @@
 <div class="container py-2">
-    <div class="row">
-        <div class="col-md-4">
-            <app-project-item-card icon="../../../../assets/heart.svg" photo="../../../../assets/labtest.png" title="front" content="lorehcbchbd chsdcssjcjsf dcduys" ></app-project-item-card>
-        </div>
-        <div class="col-md-4">
-            <app-project-item-card></app-project-item-card>
-        </div>
-        <div class="col-md-4">
-            <app-project-item-card></app-project-item-card>
-        </div>
+  <div class="row">
+    <div class="col-md-4">
+      <app-project-item-card
+        icon="../../../../assets/heart.svg"
+        photo="../../../../assets/labtest.png"
+        photoDialog="../../../../assets/labtest.png"
+        title="front"
+        content="lorehcbchbd chsdcssjcjsf dcduys"
+        date="22 March 2011"
+        description="Simple  project"
+        technologies="Php - MySql - react - nodeJs"
+      ></app-project-item-card>
     </div>
+    <div class="col-md-4">
+      <app-project-item-card
+        icon="../../../../assets/heart.svg"
+        photo="../../../../assets/labtest.png"
+        photoDialog="../../../../assets/labtest.png"
+        title="front"
+        content="lorehcbchbd chsdcssjcjsf dcduys"
+        date="22 March 2011"
+        description="Simple  project"
+        technologies="Php - MySql - react - nodeJs"
+      ></app-project-item-card>
+    </div>
+    <div class="col-md-4">
+      <app-project-item-card
+        icon="../../../../assets/heart.svg"
+        photo="../../../../assets/labtest.png"
+        photoDialog="../../../../assets/labtest.png"
+        title="front"
+        content="lorehcbchbd chsdcssjcjsf dcduys"
+        date="22 March 2011"
+        description="Simple  project"
+        technologies="Php - MySql - react - nodeJs"
+      ></app-project-item-card>
+    </div>
+  </div>
 </div>
