--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,5 +5,6 @@
 <app-ido-section></app-ido-section>
 <app-projects-section></app-projects-section>
 <app-next-section></app-next-section>
+<app-education-section></app-education-section>
 <app-contact-section></app-contact-section>
 <app-footer></app-footer>
