--- a/src/app/components/experience-section/experience-section.component.html
+++ b/src/app/components/experience-section/experience-section.component.html
@@ -1,10 +1,9 @@
-<div class="container-fuild bg-light py-5">
+<div class="container-fluid bg-light">
   <div class="row text-center">
     <div class="col-12">
       <h2 class="second-title border-bottom px-4 pb-2">My Experience</h2>
     </div>
   </div>
-
   <div class="container pt-5 pb-3 bg-light position-relative">
     <div class="row vLine">
       <div class="col-md-1" [style]="{ zIndex: 3 }">
@@ -33,7 +32,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> 
   <div class="container pt-5 pb-3 bg-light position-relative">
     <div class="row vLine">
       <div class="col-md-1" [style]="{ zIndex: 3 }">
