--- a/src/app/components/education-section/education-section.component.html
+++ b/src/app/components/education-section/education-section.component.html
@@ -1,1 +1,44 @@
-<div class="parallax"></div>
+<div class="parallax">
+  <div class="card text-center">
+    <div class="card-block px-5 py-4">
+      <img src="../../../assets/school.png" alt="schoolIcon" />
+      <p class="fw-bolder fs-5 mt-3">Uni Name</p>
+      <p class="fw-bold fs-6 mt-3" style="color: #f44336">
+        master of thechnology
+      </p>
+      <p class="fw-bold">2022-2021</p>
+      <p>
+        Est aliquam quasi molestias! 
+        quas.
+      </p>
+    </div>
+  </div>
+  <div class="card text-center">
+    <div class="card-block px-5 py-4">
+      <img src="../../../assets/pencil-and-ruler.png" alt="schoolIcon" />
+      <p class="fw-bolder fs-5 mt-3">Uni Name</p>
+      <p class="fw-bold fs-6 mt-3" style="color: #f44336">
+        master of thechnology
+      </p>
+      <p class="fw-bold">2022-2021</p>
+      <p>
+        Est aliquam quasi molestias! 
+        quas.
+      </p>
+    </div>
+  </div>
+  <div class="card text-center">
+    <div class="card-block px-5 py-4">
+      <img src="../../../assets/pencil-and-ruler.png" alt="schoolIcon" />
+      <p class="fw-bolder fs-5 mt-3">Uni Name</p>
+      <p class="fw-bold fs-6 mt-3" style="color: #f44336">
+        master of thechnology
+      </p>
+      <p class="fw-bold">2022-2021</p>
+      <p>
+        Est aliquam quasi molestias! 
+        quas.
+      </p>
+    </div>
+  </div>
+</div>
