--- a/src/app/components/contact-section/contact-section.component.html
+++ b/src/app/components/contact-section/contact-section.component.html
@@ -4,17 +4,18 @@
       <h2 class="second-title border-bottom my-5 px-4 pb-2">Contact Me</h2>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-6">
-      <p>
+  <div class="row align-items-center justify-content-center">
+    <div class="col-md-4">
+      <img src="../../../assets/gmail.png" alt="gmail" width="180px" />
+      <p  >
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eaque
         fuga eos, sapiente iusto eius aperiam officiis voluptatibus, deserunt,
         mollitia ratione voluptas unde delectus alias maxime! Praesentium
         pariatur nisi eum!
       </p>
     </div>
-    <div class="col-md-6">
-    <app-contant-form></app-contant-form>
-  </div>
+    <div class="col-md-4 border-start">
+      <app-contant-form></app-contant-form>
+    </div>
   </div>
 </div>
