--- a/src/app/components/education-section/education-section.component.html
+++ b/src/app/components/education-section/education-section.component.html
@@ -1,6 +1,6 @@
 <div class="parallax">
-  <div class="card text-center">
-    <div class="card-block px-5 py-4">
+  <div class="card text-center my-md-0 my-3">
+    <div class="card-block px-md-5 py-md-4 px-2">
       <img src="../../../assets/school.png" alt="schoolIcon" />
       <p class="fw-bolder fs-5 mt-3">Uni Name</p>
       <p class="fw-bold fs-6 mt-3" style="color: #f44336">
@@ -13,8 +13,8 @@
       </p>
     </div>
   </div>
-  <div class="card text-center">
-    <div class="card-block px-5 py-4">
+  <div class="card text-center my-md-0 my-3">
+    <div class="card-block px-md-5 py-md-4 px-2">
       <img src="../../../assets/pencil-and-ruler.png" alt="schoolIcon" />
       <p class="fw-bolder fs-5 mt-3">Uni Name</p>
       <p class="fw-bold fs-6 mt-3" style="color: #f44336">
@@ -27,8 +27,8 @@
       </p>
     </div>
   </div>
-  <div class="card text-center">
-    <div class="card-block px-5 py-4">
+  <div class="card text-center my-md-0 my-3">
+    <div class="card-block px-md-5 py-md-4 px-2">
       <img src="../../../assets/pencil-and-ruler.png" alt="schoolIcon" />
       <p class="fw-bolder fs-5 mt-3">Uni Name</p>
       <p class="fw-bold fs-6 mt-3" style="color: #f44336">
