--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <footer class="py-5">
       <div class="row">
-        <div class="col-3">
+        <div class="col-md-3 col-6">
           <h5 class="fw-bold">ABOUT ME</h5>
           <p class="text-muted">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
@@ -10,13 +10,13 @@
           </p>
         </div>
 
-        <div class="col-3">
+        <div class="col-md-3 col-6">
           <h5 class="fw-bold">PHONE & EMAIL</h5>
           <p class="text-muted">+989359262884</p>
           <p class="text-muted">sepehrtvk@gmail.com</p>
         </div>
 
-        <div class="col-3">
+        <div class="col-md-3 col-6">
           <h5 class="fw-bold">ADDERESS</h5>
           <p class="text-muted">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
@@ -24,7 +24,7 @@
           </p>
         </div>
 
-        <div class="col-3">
+        <div class="col-md-3 col-12">
           <h5 class="fw-bold">SOCIAL MEDIA</h5>
           <app-icon-set [align]="false"></app-icon-set>
         </div>
