--- a/src/app/components/ido-section/ido-section.component.html
+++ b/src/app/components/ido-section/ido-section.component.html
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row mb-4">
-    <div class="col-md-4">
+    <div class="col-md-4 mb-4 mb-md-0">
       <app-ido-item
         title="Web Design"
         icon="../../../assets/code.png"
@@ -13,7 +13,7 @@
             "
       ></app-ido-item>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 mb-4 mb-md-0">
       <app-ido-item
         title="Web Design"
         icon="../../../assets/code.png"
@@ -31,7 +31,7 @@
     </div>
   </div>
   <div class="row ">
-    <div class="col-md-4">
+    <div class="col-md-4 mb-4 mb-md-0">
       <app-ido-item
         title="Web Design"
         icon="../../../assets/code.png"
@@ -39,7 +39,7 @@
             "
       ></app-ido-item>
     </div>
-    <div class="col-md-4">
+    <div class="col-md-4 mb-4 mb-md-0">
       <app-ido-item
         title="Web Design"
         icon="../../../assets/code.png"
