--- a/src/app/components/main-section/main-section.component.html
+++ b/src/app/components/main-section/main-section.component.html
@@ -1,6 +1,6 @@
-<div class="container-fluid bg-light">
-  <div class="row text-center justify-content-center">
-    <div class="col-md-5 mt-5 pt-5">
+<div class="container-fluid bg-light backPhoto text-white py-5">
+  <div class="row text-center">
+    <div class="col-md-5 offset-md-2 my-5 py-5">
       <div class="row text-start">
         <div class="col-12">
           <h4>Hello its Sepehr Tavakoli</h4>
@@ -20,8 +20,8 @@
         </div>
       </div>
     </div>
-    <div class="col-md-5">
+    <!-- <div class="col-md-5">
       <img src="../../../assets/IMG_6323.png" alt="my photo" width="280px" />
-    </div>
+    </div> -->
   </div>
 </div>
