--- a/src/app/components/next-section/next-section.component.html
+++ b/src/app/components/next-section/next-section.component.html
@@ -13,10 +13,10 @@
         quibusdam! Non consequatur sequi assumenda amet culpa, illum et sunt vel
         perferendis aspernatur. Quas, recusandae?
       </p>
-      <div class="d-flex justify-content-center w-100 mt-4">
+      <div class="d-flex flex-column-reverse flex-md-row justify-content-center w-md-100 mt-4">
 
           <button mat-raised-button color="basic" class="me-md-2">Services</button>
-          <button mat-raised-button color="warn">Let's Work Togheder</button>
+          <button mat-raised-button color="warn" class=" mb-3 mb-md-0">Let's Work Togheder</button>
       </div>
 
     </div>
