--- a/src/app/components/projects-section/projects-section.component.html
+++ b/src/app/components/projects-section/projects-section.component.html
@@ -4,7 +4,7 @@
       <div class="col-12">
         <h2 class="second-title border-bottom my-5 px-4 pb-2">My Projects</h2>
       </div>
-      <div class="col-12">
+      <div class="col-12 m-0">
         <mat-tab-group animationDuration="2000ms" mat-align-tabs="center">
           <mat-tab label="Web Development">
             <app-project-item></app-project-item>
