--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
-<!-- <app-header></app-header>
-<app-main-section></app-main-section> -->
-<!-- <app-about></app-about> -->
+<app-header></app-header>
+<app-main-section></app-main-section>
+<app-about></app-about>
 <app-experience-section></app-experience-section>
-<!-- <app-ido-section></app-ido-section> -->
-<!-- <app-projects-section></app-projects-section>
+<app-ido-section></app-ido-section>
+<app-projects-section></app-projects-section>
 <app-next-section></app-next-section>
-<app-education-section></app-education-section> -->
-<!-- <app-contact-section></app-contact-section>
-<app-footer></app-footer> -->
+<app-education-section></app-education-section>
+<app-contact-section></app-contact-section>
+<app-footer></app-footer> 
