--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,24 +1,40 @@
 <nav class="navbar navbar-expand-lg bg-white border-bottom">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">Sepehr</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link active" href="#">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#about">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
-          </li>
-        </ul>
-      </div>
+  <div class="container-fluid">
+    <a class="navbar-brand d-md-none" href="#">
+      <img src="../../../assets/logo.png" alt="logo" width="80px" />
+    </a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div
+      class="collapse navbar-collapse justify-content-center"
+      id="navbarSupportedContent"
+    >
+      <ul class="navbar-nav mb-2 mb-lg-0 align-items-center">
+        <li class="nav-item mx-3">
+          <a class="nav-link active" href="#">Home</a>
+        </li>
+        <li class="nav-item mx-3">
+          <a class="nav-link" href="#about">About</a>
+        </li>
+        <li class="d-none d-md-block">
+          <img src="../../../assets/logo.png" alt="logo" width="80px" />
+        </li>
+        <li class="nav-item mx-3">
+          <a class="nav-link" href="#">Projects</a>
+        </li>
+        <li class="nav-item mx-3">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
