--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,8 @@
 <app-about></app-about>
 <app-experience-section></app-experience-section>
 <app-ido-section></app-ido-section>
-<app-projects-section></app-projects-section>
-<app-next-section></app-next-section>
 <app-education-section></app-education-section>
+<app-projects-section></app-projects-section>
+<!-- <app-next-section></app-next-section> -->
 <app-contact-section></app-contact-section>
 <app-footer></app-footer> 
