--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,11 +1,11 @@
 <div class="container my-md-4" id="about">
   <div class="row text-center justify-content-around">
     <div class="col-12">
-      <h2 class="second-title border-bottom my-5 px-4 pb-2">About</h2>
+      <h2 class="second-title border-bottom my-5 px-4 pb-2">About Me</h2>
     </div>
     <div class="col-md-5 text-start">
       <h3 class="fw-bolder">Personal Details :</h3>
-      <p>
+      <p style="text-align: justify; line-height: 1.6rem">
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet, culpa.
         Sit maxime sed rerum? Architecto distinctio enim nostrum delectus ipsam
         dignissimos omnis, ea eaque aut porro neque nemo accusamus natus.
@@ -26,7 +26,7 @@
       </div>
     </div>
     <div class="col-md-5 text-start">
-      <h4 class="fw-bolder">Skills:</h4>
+      <h4 class="fw-bolder">My Skills :</h4>
       <app-skills></app-skills>
     </div>
   </div>
