--- a/src/app/components/education-section/education-section.component.html
+++ b/src/app/components/education-section/education-section.component.html
@@ -1,44 +1,33 @@
-<div class="parallax">
-  <div class="card text-center my-md-0 my-3">
-    <div class="card-block px-md-5 py-md-4 px-2">
-      <img src="../../../assets/school.png" alt="schoolIcon" />
-      <p class="fw-bolder fs-5 mt-3">Uni Name</p>
-      <p class="fw-bold fs-6 mt-3" style="color: #f44336">
-        master of thechnology
-      </p>
-      <p class="fw-bold">2022-2021</p>
-      <p>
-        Est aliquam quasi molestias! 
-        quas.
-      </p>
+<div class="parallax container-fluid py-5">
+  <div class="row justify-content-center">
+    <div class="col-12 text-center mb-3">
+      <h2 class="second-title border-bottom my-4 px-4 pb-2">My Education</h2>
     </div>
-  </div>
-  <div class="card text-center my-md-0 my-3">
-    <div class="card-block px-md-5 py-md-4 px-2">
-      <img src="../../../assets/pencil-and-ruler.png" alt="schoolIcon" />
-      <p class="fw-bolder fs-5 mt-3">Uni Name</p>
-      <p class="fw-bold fs-6 mt-3" style="color: #f44336">
-        master of thechnology
-      </p>
-      <p class="fw-bold">2022-2021</p>
-      <p>
-        Est aliquam quasi molestias! 
-        quas.
-      </p>
+    <div class="col-md-3 col-12 card text-center my-md-0 my-3 mx-5">
+      <div class="card-block px-md-2 py-md-4 px-2">
+        <img src="../../../assets/school.png" alt="schoolIcon" />
+        <p class="fw-bolder fs-5 mt-4 mb-4">
+          Amirkabir University of Technology, Tehran
+        </p>
+        <p class="fw-bold fs-6 mt-3" style="color: #f44336">
+          Bachelor, Computer Engineering
+        </p>
+        <p class="fw-bold">2019 - PRESENT</p>
+        <p class="mt-3 fw-light">Grade : 16.48</p>
+      </div>
     </div>
-  </div>
-  <div class="card text-center my-md-0 my-3">
-    <div class="card-block px-md-5 py-md-4 px-2">
-      <img src="../../../assets/pencil-and-ruler.png" alt="schoolIcon" />
-      <p class="fw-bolder fs-5 mt-3">Uni Name</p>
-      <p class="fw-bold fs-6 mt-3" style="color: #f44336">
-        master of thechnology
-      </p>
-      <p class="fw-bold">2022-2021</p>
-      <p>
-        Est aliquam quasi molestias! 
-        quas.
-      </p>
+    <div class="col-md-3 col-12 card text-center my-md-0 my-3 mx-5">
+      <div class="card-block px-md-2 py-md-4 px-2">
+        <img src="../../../assets/pencil-and-ruler.png" alt="schoolIcon" />
+        <p class="fw-bolder fs-5 mt-4 mb-4">
+          Salam Tajrish High School, Tehran
+        </p>
+        <p class="fw-bold fs-6 mt-3" style="color: #f44336">
+          Diploma, Mathematics
+        </p>
+        <p class="fw-bold">2015 - 2019</p>
+        <p class="mt-3 fw-light">Grade : 19.12</p>
+      </div>
     </div>
   </div>
 </div>
