--- a/src/app/components/experience-section/experience-section.component.html
+++ b/src/app/components/experience-section/experience-section.component.html
@@ -1,7 +1,7 @@
-<div class="container-fluid bg-light">
+<div class="container-fluid pb-5 bg-light">
   <div class="row text-center">
     <div class="col-12">
-      <h2 class="second-title border-bottom px-4 pb-2">My Experience</h2>
+      <h2 class="second-title border-bottom mt-5 px-4 pb-2">My Experience</h2>
     </div>
   </div>
   <div class="container pt-5 pb-3 bg-light position-relative">
@@ -17,46 +17,19 @@
       <div class="col-md-11">
         <div class="row">
           <div class="px-5 py-4 bg-white col-md-4 text-center box arrow-left">
-            <h2 class="second-title pb-4">title rrrrrrrrrrrrrrrrrrrr</h2>
-            <p class="m-0 text-uppercase">companey name rrrr</p>
+            <h2 class="second-title pb-4">Fall 2019, Summer 2020</h2>
+            <p class="m-0 text-uppercase">Pole Ideal Pars, Tehran</p>
           </div>
           <div class="px-5 py-4 bg-warning bg-gradient col-md-8 text-white">
-            <h2 class="text-uppercase">title</h2>
-            <p class="m-0">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
-              blanditiis in non quaerat beatae neque velit quod! Dicta
-              doloremque ratione voluptas facere eveniet. Sit rem molestiae
-              magni similique in consectetur!
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> 
-  <div class="container pt-5 pb-3 bg-light position-relative">
-    <div class="row vLine">
-      <div class="col-md-1" [style]="{ zIndex: 3 }">
-        <img
-          src="../../../assets/graduation.png"
-          class="rounded-circle border p-3 bg-warning bg-gradient"
-          alt="customer"
-          width="64px"
-        />
-      </div>
-      <div class="col-md-11">
-        <div class="row">
-          <div class="px-5 py-4 bg-white col-md-4 text-center box arrow-left">
-            <h2 class="second-title pb-4">title rrrrrrrrrrrrrrrrrrrr</h2>
-            <p class="m-0 text-uppercase">companey name rrrr</p>
-          </div>
-          <div class="px-5 py-4 bg-warning bg-gradient col-md-8 text-white">
-            <h2 class="text-uppercase">title</h2>
-            <p class="m-0">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
-              blanditiis in non quaerat beatae neque velit quod! Dicta
-              doloremque ratione voluptas facere eveniet. Sit rem molestiae
-              magni similique in consectetur!
-            </p>
+            <h2 class="text-uppercase">Front-end developer</h2>
+            <span class="m-0">
+              <p class="mb-2">
+                JavaScript HTML HTML5 CSS3 Bootstrap 4 Responsive Design
+              </p>
+              Part-time and project-oriented work experience with the content
+              production team of Pole Ideal Pars Company. Execution of a large
+              project of a database of medical diagnostic tests.
+            </span>
           </div>
         </div>
       </div>
@@ -75,17 +48,47 @@
       <div class="col-md-11">
         <div class="row">
           <div class="px-5 py-4 bg-white col-md-4 text-center box arrow-left">
-            <h2 class="second-title pb-4">title rrrrrrrrrrrrrrrrrrrr</h2>
-            <p class="m-0 text-uppercase">companey name rrrr</p>
+            <h2 class="second-title pb-4">Fall 2019, Summer 2020</h2>
+            <p class="m-0 text-uppercase">Karenesa, Tehran</p>
           </div>
           <div class="px-5 py-4 bg-warning bg-gradient col-md-8 text-white">
-            <h2 class="text-uppercase">title</h2>
-            <p class="m-0">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste
-              blanditiis in non quaerat beatae neque velit quod! Dicta
-              doloremque ratione voluptas facere eveniet. Sit rem molestiae
-              magni similique in consectetur!
-            </p>
+            <h2 class="text-uppercase">Freelance Developer</h2>
+            <span class="m-0">
+              <p class="mb-2">HTML5 CSS3 Responsive Design Wordpress</p>
+              Experience teamwork with a number of students and doing several
+              projects as a freelancer Doing Azarand online store project.
+              Perform several projects using wordpress and templates and related
+              plugins such as elementor.
+            </span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container pt-5 pb-3 bg-light position-relative">
+    <div class="row vLine">
+      <div class="col-md-1" [style]="{ zIndex: 3 }">
+        <img
+          src="../../../assets/graduation.png"
+          class="rounded-circle border p-3 bg-warning bg-gradient"
+          alt="customer"
+          width="64px"
+        />
+      </div>
+      <div class="col-md-11">
+        <div class="row">
+          <div class="px-5 py-4 bg-white col-md-4 text-center box arrow-left">
+            <h2 class="second-title pb-4">Summer 2022, Now</h2>
+            <p class="m-0 text-uppercase">Varanegar, Tehran</p>
+          </div>
+          <div class="px-5 py-4 bg-warning bg-gradient col-md-8 text-white">
+            <h2 class="text-uppercase">web developer</h2>
+            <span class="m-0">
+              <p class="mb-2">Angular HTML5 CSS3</p>
+              Varanegar is the first and the most prominent software development
+              company specifically focused on the Sales and Distribution and
+              Direct Store Delivery solution
+            </span>
           </div>
         </div>
       </div>
