--- a/src/app/components/main-section/main-section.component.html
+++ b/src/app/components/main-section/main-section.component.html
@@ -2,21 +2,19 @@
   <div class="row text-center">
     <div class="col-md-5 offset-md-2 my-5 py-5">
       <div class="row text-start">
-        <div class="col-12">
-          <h4>Hello its Sepehr Tavakoli</h4>
-        </div>
         <div class="col-12 mb-2">
-          <h1>I'm a Developer</h1>
+          <h4 class="fs-4" >Hello It's Sepehr Tavakoli</h4>
         </div>
-        <div class="col-12 mb-5">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio sit
-            iste accusantium autem incidunt magni nesciunt voluptas voluptates
-            natus officia ex quia inventore odio.
+        <div class="col-12 col-md-7 mb-2">
+          <h1 class="fs-1 fw-bold" style="line-height:3.2rem;">I'm a Programmer and Web Developer</h1>
+        </div>
+        <div class="col-12 mt-4 mb-5"> 
+          <p class="fs-5" >
+            I design and code beautifully simple things, and I love what I do.
           </p>
         </div>
         <div class="col-12">
-            <button mat-raised-button color="warn">Hire Me Now</button>
+          <button mat-raised-button color="warn">Hire Me Now</button>
         </div>
       </div>
     </div>
