--- a/src/app/components/projects-section/projects-section.component.html
+++ b/src/app/components/projects-section/projects-section.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid pb-5">
+<div class="container-fluid bg-light pb-5">
   <div class="container">
     <div class="row text-center justify-content-around">
       <div class="col-12">
