--- a/src/app/components/contact-section/contact-section.component.html
+++ b/src/app/components/contact-section/contact-section.component.html
@@ -7,11 +7,11 @@
   <div class="row align-items-center justify-content-center">
     <div class="col-md-4">
       <img src="../../../assets/gmail.png" alt="gmail" width="180px" />
-      <p  >
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores eaque
-        fuga eos, sapiente iusto eius aperiam officiis voluptatibus, deserunt,
-        mollitia ratione voluptas unde delectus alias maxime! Praesentium
-        pariatur nisi eum!
+      <h3 class="fw-bold">Have a question ?</h3>
+      <p class="text-justify-center">
+        If you want to be in touch with me or you may have any question, let me
+        know by filling the contact form to send a direct email, or call me by
+        my phone number.
       </p>
     </div>
     <div class="col-md-4 border-start">
