--- a/src/app/components/education-section/education-section.component.css
+++ b/src/app/components/education-section/education-section.component.css
@@ -11,9 +11,9 @@
     background-repeat: no-repeat;
     background-size: cover;
 
-    display: flex;
-    justify-content:space-evenly;
-    align-items: center;
+    /* display: flex;
+    justify-content:center;
+    align-items: center; */
 
 }
 @media screen and (max-width: 992px) {
