--- a/src/app/components/ido-section/ido-section.component.html
+++ b/src/app/components/ido-section/ido-section.component.html
@@ -1,4 +1,4 @@
-<div class="container pb-5 text-center">
+<div class="container pb-5 mb-5 text-center">
   <div class="row">
     <div class="col-12">
       <h2 class="second-title border-bottom my-5 px-4 pb-2">What I Do</h2>
