--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -6,9 +6,10 @@
     <div class="col-md-5 text-start">
       <h3 class="fw-bolder">Personal Details :</h3>
       <p style="text-align: justify; line-height: 1.6rem">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet, culpa.
-        Sit maxime sed rerum? Architecto distinctio enim nostrum delectus ipsam
-        dignissimos omnis, ea eaque aut porro neque nemo accusamus natus.
+        I'm a front-end web developer with over 3 year exprience based in
+        Tehran, I really love coding and making new things. In this website you
+        can get familiar with me and my perfect skills. I wish you have fun
+        with it.
       </p>
       <div class="row mt-4">
         <app-about-item
@@ -26,12 +27,13 @@
       </div>
     </div>
     <div class="col-md-5 text-start">
-      <h4 class="fw-bolder">My Skills :</h4>
+      <h4 class="fw-bolder">Coding Skills :</h4>
       <app-skills></app-skills>
     </div>
   </div>
   <div class="row my-5 justify-content-around">
     <div class="col-md-5 py-3">
+      <h4 class="fw-bolder mb-4">Soft Skills :</h4>
       <app-big-skill
         *ngFor="let item of bigSkills"
         [title]="item.title"
@@ -41,7 +43,7 @@
     </div>
     <div class="col-md-5 text-center">
       <img
-        src="../../../assets/12.jpeg"
+        src="../../../assets/IMG_7690 copy.png"
         alt="stand photo"
         class="w-75 rounded-1"
       />
