--- a/src/app/components/about/big-skill/big-skill.component.html
+++ b/src/app/components/about/big-skill/big-skill.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex align-items-start justify-content-between mb-5">
+<div class="d-flex align-items-start mb-5">
   <div class="me-5 mt-1">
     <img [src]="iconName" alt="iconName" width="50px"/>
   </div>
