--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -3,24 +3,26 @@
     <footer class="py-5">
       <div class="row">
         <div class="col-md-3 col-6">
-          <h5 class="fw-bold">ABOUT ME</h5>
-          <p class="text-muted">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
-            doloribus ducimu.
+          <h5 class="fw-bold">ABOUT THIS PAGE</h5>
+          <p class="text-muted text-justify-left pe-md-4">
+            I created this website to introduce myself and my skills. Also, my
+            projects that show all my skills are given in the relevant section.
+            If you have any comments about me or this website, I will be happy
+            to share them with me via email. Thank you for your attention.
           </p>
         </div>
-
         <div class="col-md-3 col-6">
           <h5 class="fw-bold">PHONE & EMAIL</h5>
           <p class="text-muted">+989359262884</p>
-          <p class="text-muted">sepehrtvk@gmail.com</p>
+          <p class="text-muted">sepehrtvk2001@gmail.com</p>
         </div>
-
         <div class="col-md-3 col-6">
-          <h5 class="fw-bold">ADDERESS</h5>
-          <p class="text-muted">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio
-            doloribus ducimus magnam autem assumenda doloremqueovident.
+          <h5 class="fw-bold">NEXT OBJECTIVES</h5>
+          <p class="text-muted text-justify-left pe-md-4">
+            In the future, my career path will be programming. Web programming,
+            along with artificial intelligence and machine learning, will
+            accompany me on this path. In the future, I will create projects
+            that improve the use of computers by different users.
           </p>
         </div>
 
@@ -29,12 +31,9 @@
           <app-icon-set [align]="false"></app-icon-set>
         </div>
       </div>
-
     </footer>
-</div>
-<div
-  class="d-flex justify-content-center py-4 my-4 border-top text-muted"
->
-  <p>Sepehr Tavakoli © All rights reserved.</p>
-</div>
+  </div>
+  <div class="d-flex justify-content-center py-4 my-4 border-top text-muted">
+    <p>Sepehr Tavakoli © All rights reserved.</p>
+  </div>
 </div>
