--- a/src/app/components/ido-section/ido-section.component.html
+++ b/src/app/components/ido-section/ido-section.component.html
@@ -8,14 +8,14 @@
     <div class="col-md-4 mb-4 mb-md-0">
       <app-ido-item
         title="Web Design"
-        icon="../../../assets/code.png"
+        icon="../../../assets/web-design.png"
         content="dantium eaque,cipit deleniti nostrum amet. Corporis assumenda libero sequi harum quibusdam quisquam inventore.
             "
       ></app-ido-item>
     </div>
     <div class="col-md-4 mb-4 mb-md-0">
       <app-ido-item
-        title="Web Design"
+        title="Front-End"
         icon="../../../assets/code.png"
         content="dantium eaque,cipit deleniti nostrum amet. Corporis assumenda libero sequi harum quibusdam quisquam inventore.
             "
@@ -23,8 +23,8 @@
     </div>
     <div class="col-md-4">
       <app-ido-item
-        title="Web Design"
-        icon="../../../assets/code.png"
+        title="Back-End"
+        icon="../../../assets/coding.png"
         content="dantium eaque,cipit deleniti nostrum amet. Corporis assumenda libero sequi harum quibusdam quisquam inventore.
             "
       ></app-ido-item>
@@ -33,24 +33,24 @@
   <div class="row ">
     <div class="col-md-4 mb-4 mb-md-0">
       <app-ido-item
-        title="Web Design"
-        icon="../../../assets/code.png"
+        title="Artificial Intelligence"
+        icon="../../../assets/artificial-intelligence.png"
         content="dantium eaque,cipit deleniti nostrum amet. Corporis assumenda libero sequi harum quibusdam quisquam inventore.
             "
       ></app-ido-item>
     </div>
     <div class="col-md-4 mb-4 mb-md-0">
       <app-ido-item
-        title="Web Design"
-        icon="../../../assets/code.png"
+        title="Machine Learning"
+        icon="../../../assets/learning.png"
         content="dantium eaque,cipit deleniti nostrum amet. Corporis assumenda libero sequi harum quibusdam quisquam inventore.
             "
       ></app-ido-item>
     </div>
     <div class="col-md-4">
       <app-ido-item
-        title="Web Design"
-        icon="../../../assets/code.png"
+        title="Database Design"
+        icon="../../../assets/database-storage.png"
         content="dantium eaque,cipit deleniti nostrum amet. Corporis assumenda libero sequi harum quibusdam quisquam inventore.
             "
       ></app-ido-item>
