--- a/src/app/components/contact-section/contact-section.component.html
+++ b/src/app/components/contact-section/contact-section.component.html
@@ -4,7 +4,7 @@
       <h2 class="second-title border-bottom my-5 px-4 pb-2">Contact Me</h2>
     </div>
   </div>
-  <div class="row align-items-center justify-content-center">
+  <div class="row align-items-center justify-content-center mb-md-5">
     <div class="col-md-4">
       <img src="../../../assets/gmail.png" alt="gmail" width="180px" />
       <h3 class="fw-bold">Have a question ?</h3>
